# error_bash_predi

./: .gitignore  Cargo.toml  README.md  chat_with_ai.sh  predict_image.sh  test_chat_api.py  test_image.py  test_os_error_api.py
src/: main.rs
