[package]
name = "bashpic"
version = "0.1.0"
edition = "2024"

[dependencies]
tch = "0.5.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
actix-web-actors = "4"
actix = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
